# connext-dds-based-radar-sim

./: .gitattributes  .gitignore  .markdown-preview.html  CMakeLists.txt  CMakePresets.json  ConnextStudioDemo.md  README.md  TODO.md  WindowsPortPlan.md
.github/workflows/: portable-tests.yml  windows-full.yml
cmake/: toolchain-macos-arm64.cmake  toolchain-windows-msvc.cmake
docs/: CONNEXT_STUDIO.md  OPERATOR_DISPLAY_GUIDE.md  RUN_WINDOWS.md
idl/: radar_types.idl
qos/: radar_qos.xml
scripts/: run-demo.sh
scripts/windows/: ensure-build.ps1  run-demo.cmd  run-demo.ps1  smoke-test.cmd  smoke-test.ps1
src/common/: DdsSupport.hpp  Log.hpp  PeriodicDeadline.hpp  SimClock.hpp  SpscQueue.hpp  TopicNames.hpp
src/radar_app/: CommandConsole.hpp  CommandSink.hpp  DataBus.hpp  ShipSimulator.cpp  ShipSimulator.hpp  main.cpp
src/radar_app/components/: BeamPatternModel.cpp  BeamPatternModel.hpp  BeamScheduler.cpp  BeamScheduler.hpp  Beamformer.cpp  Beamformer.hpp  CalibrationMonitor.cpp  CalibrationMonitor.hpp  CommandHandler.cpp  CommandHandler.hpp  ComponentBase.hpp  DetectionProcessor.cpp  DetectionProcessor.hpp  DetectionSignalProcessing.hpp  HmiUi.cpp  HmiUi.hpp  TrackManager.cpp  TrackManager.hpp  TrackerCore.cpp  TrackerCore.hpp
src/radar_app/ui/: AScopeView.cpp  AScopeView.hpp  BScopeView.cpp  BScopeView.hpp  MetalContext.hpp  MetalContext.mm  Panels.cpp  Panels.hpp  PpiView.cpp  PpiView.hpp  Theme.hpp  UiApp.cpp  UiApp.hpp
src/radar_app/ui/windows/: WindowsApp.manifest  WindowsResources.rc
src/target_gen/: DiagnosticsInjector.cpp  DiagnosticsInjector.hpp  TargetFleet.cpp  TargetFleet.hpp  TargetScenario.cpp  TargetScenario.hpp  main.cpp
tests/: beam_pattern_regression.cpp  detection_processor_regression.cpp  periodic_deadline_regression.cpp  target_scenario_regression.cpp  tracker_replay.cpp  ui_controls_smoke.cpp
